complete basic ui using html and css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./index.css">
     <title>Document</title>
 </head>
 <body>
-       
+    <div class="mainContainer">
+
+        <div class="displayArea">
+            <h2 style="color: white;">Generate Password</h2>
+        </div>
+
+        <div class="displayArea">
+            <h4 style="font-size: 0.6rem;">GENERATED PASSWORD</h4>
+            <div class="box">
+                <!-- display generated password here  -->
+            </div>
+        </div>
+
+        <div class="displayArea">
+            <h4>Length : 0</h4>
+            <div class="minibox">
+
+            </div>
+        </div>
+
+        <div class="displayArea">
+            <h4>Settings</h4>
+            <div class="minibox"></div>
+            <div class="minibox" style="margin: 0.45rem 0rem;"></div>
+            <div class="minibox"></div>
+        </div>
+
+        <div class="generateBtn">
+            Generate Password 
+        </div>
+
+    </div>
 </body>
 </html>
