learn a bit about ::before and ::after psuedo selectors

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    
     <div class="mainContainer">
 
         <div class="displayArea">
@@ -17,7 +18,6 @@
         <div class="displayArea">
             <h4 style="font-size: 0.6rem;">GENERATED PASSWORD</h4>
             <div class="box">
-                <!-- display generated password here  -->
             </div>
         </div>
 
@@ -30,9 +30,15 @@
 
         <div class="displayArea">
             <h4>Settings</h4>
-            <div class="minibox"></div>
-            <div class="minibox" style="margin: 0.45rem 0rem;"></div>
-            <div class="minibox"></div>
+            <div class="minibox">
+                <p>Include numbers</p>
+            </div>
+            <div class="minibox" style="margin: 0.45rem 0rem;">
+                <p>Include letters</p>
+            </div>
+            <div class="minibox">
+                <p>Include symbols</p>
+            </div>
         </div>
 
         <div class="generateBtn">
@@ -40,5 +46,10 @@
         </div>
 
     </div>
+
+    <!-- <label class="toggle">
+        <input class="toggle__input" type="checkbox">
+        <div class="toggle__fill"></div>
+    </label> -->
 </body>
 </html>
