design toggle buttons using pure css

--- a/index.html
+++ b/index.html
@@ -32,12 +32,30 @@
             <h4>Settings</h4>
             <div class="minibox">
                 <p>Include numbers</p>
+                <div class="strength">
+                    <label class="toggle">
+                        <input class="toggle__input" type="checkbox">
+                        <div class="toggle__fill"></div>
+                    </label>
+                </div>
             </div>
             <div class="minibox" style="margin: 0.45rem 0rem;">
                 <p>Include letters</p>
+                <div class="strength">
+                    <label class="toggle">
+                        <input class="toggle__input" type="checkbox">
+                        <div class="toggle__fill"></div>
+                    </label>
+                </div>
             </div>
             <div class="minibox">
                 <p>Include symbols</p>
+                <div class="strength">
+                    <label class="toggle">
+                        <input class="toggle__input" type="checkbox">
+                        <div class="toggle__fill"></div>
+                    </label>
+                </div>
             </div>
         </div>
 
@@ -46,10 +64,5 @@
         </div>
 
     </div>
-
-    <!-- <label class="toggle">
-        <input class="toggle__input" type="checkbox">
-        <div class="toggle__fill"></div>
-    </label> -->
 </body>
 </html>
