add hover effect to generate button

--- a/index.html
+++ b/index.html
@@ -8,26 +8,18 @@
     <title>Document</title>
 </head>
 <body>
-    
     <div class="mainContainer">
-
         <div class="displayArea">
             <h2 style="color: white;">Generate Password</h2>
         </div>
-
         <div class="displayArea">
             <h4 style="font-size: 0.6rem;">GENERATED PASSWORD</h4>
-            <div class="box">
-            </div>
+            <div class="box"></div>
         </div>
-
         <div class="displayArea">
             <h4>Length : 0</h4>
-            <div class="minibox">
-
-            </div>
+            <div class="minibox"></div>
         </div>
-
         <div class="displayArea">
             <h4>Settings</h4>
             <div class="minibox">
@@ -58,11 +50,9 @@
                 </div>
             </div>
         </div>
-
         <div class="generateBtn">
             Generate Password 
         </div>
-
     </div>
 </body>
 </html>
