create input slider element

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         </div>
         <div class="displayArea">
             <h4>Length : 0</h4>
-            <div class="minibox"></div>
+            <div class="minibox input-range">
+                <span>4</span>
+                <input type="range" name="range" id="slider">
+                <span>32</span>
+            </div>
         </div>
         <div class="displayArea">
             <h4>Settings</h4>
