--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" media = "screen and (max-width : 500px)" href="./mobile.css">
+    <link rel="stylesheet" media = "screen and (max-width : 768px)" href="./tablets.css">
     <title>Document</title>
 </head>
 <body>
@@ -18,10 +19,10 @@
             <div class="box"></div>
         </div>
         <div class="displayArea">
-            <h4>Length : <span id = "password-length">0</span> </h4>
+            <h4>Length : <span id = "password-length">4</span> </h4>
             <div class="minibox input-range">
                 <span>4</span>
-                <input type="range" name="range" id="slider" min="4" max="64">
+                <input type="range" name="range" id="slider" min="4" max="64" value="4">
                 <span>64</span>
             </div>
         </div>
