create toggle buttons using html css and javascript. manipulating ::before and ::after psuedo elements is becoming hard

--- a/index.html
+++ b/index.html
@@ -32,28 +32,25 @@
             <div class="minibox">
                 <p>Include numbers</p>
                 <div class="strength">
-                    <label class="toggle">
-                        <input class="toggle__input" type="checkbox">
-                        <div class="toggle__fill" id = 'includeNumbers'></div>
-                    </label>
+                    <div class="toggle__fill" id = 'includeNumbers'>
+
+                    </div>
                 </div>
             </div>
             <div class="minibox" style="margin: 0.45rem 0rem;">
                 <p>Include letters</p>
                 <div class="strength">
-                    <label class="toggle">
-                        <input class="toggle__input" type="checkbox">
-                        <div class="toggle__fill" id = 'includeLetters'></div>
-                    </label>
+                    <div class="toggle__fill" id = 'includeLetters'>
+
+                    </div>
                 </div>
             </div>
             <div class="minibox">
                 <p>Include symbols</p>
                 <div class="strength">
-                    <label class="toggle">
-                        <input class="toggle__input" type="checkbox">
-                        <div class="toggle__fill" id = 'includeSymbols'></div>
-                    </label>
+                    <div class="toggle__fill" id = 'includeSymbols'>
+                        
+                    </div>
                 </div>
             </div>
         </div>
