--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" media = "screen and (max-width : 500px)" href="./mobile.css">
     <link rel="stylesheet" media = "screen and (max-width : 768px)" href="./tablets.css">
+    <script src="https://kit.fontawesome.com/4e89eb9914.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -33,7 +34,6 @@
                 <p>Include numbers</p>
                 <div class="strength">
                     <div class="toggle__fill" id = 'includeNumbers'>
-
                     </div>
                 </div>
             </div>
@@ -41,7 +41,6 @@
                 <p>Include letters</p>
                 <div class="strength">
                     <div class="toggle__fill" id = 'includeLetters'>
-
                     </div>
                 </div>
             </div>
@@ -49,7 +48,6 @@
                 <p>Include symbols</p>
                 <div class="strength">
                     <div class="toggle__fill" id = 'includeSymbols'>
-                        
                     </div>
                 </div>
             </div>
