half way through the project

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                 <p>Include numbers</p>
                 <div class="strength">
                     <div class="toggle__fill" id = 'includeNumbers'>
+                        <div class="icon">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -41,6 +43,8 @@
                 <p>Include letters</p>
                 <div class="strength">
                     <div class="toggle__fill" id = 'includeLetters'>
+                        <div class="icon">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -48,6 +52,8 @@
                 <p>Include symbols</p>
                 <div class="strength">
                     <div class="toggle__fill" id = 'includeSymbols'>
+                        <div class="icon">
+                        </div>
                     </div>
                 </div>
             </div>
