still need to do two things

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
         </div>
         <div class="displayArea">
             <h4 style="font-size: 0.6rem;">GENERATED PASSWORD</h4>
-            <div class="box" id = 'displayOutput' style="display: flex; justify-content: center;
-            align-items: center; color: #fff;"></div>
+            <div class="box">
+                <p id = "displayOutput" style="padding-top : 0.4rem">
+                    
+                </p>
+            </div>
         </div>
         <div class="displayArea">
             <h4>Length : <span id = "password-length">4</span> </h4>
