complete the project. I will check it out further if I think find any bugs or if I think any UI improvements

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
         <div class="displayArea">
             <h4 style="font-size: 0.6rem;">GENERATED PASSWORD</h4>
             <div class="box">
-                <p id = "displayOutput" style="padding-top : 0.4rem">
-                    
-                </p>
+                <p id = "displayOutput" style="padding-top : 0.4rem"></p>
             </div>
         </div>
         <div class="displayArea">
